update staff
